<resources>
    <string name="app_name">Teach Me</string>
    <string name="hint_correo">Email</string>
    <string name="hint_contrasena">Password</string>
    <string name="btnIniciarSesion">SIGN IN</string>
    <string name="btnCrearCuenta">CREATE ACCOUNT</string>
    <string name="btnCerrarSesion">LOG OUT</string>


    <string name="facebook_app_id">171549470169865</string>
    <string name="fb_login_protocol_scheme">fb171549470169865</string>
    <string name="txtCreateAccount">REGISTER A NEW ACCOUNT</string>
    <string name="hint_fullname">Full Name</string>
    <string name="txtRegister">Register</string>
    <string name="txtNoAccount">No account yet? Create one</string>
    <string name="hint_phone">Phone</string>


    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="hint_repeat_contrasena">Repeat Password</string>
    <string name="already_member">Already a member? Login</string>
    <string name="messages_hint">Message</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="hint_status">Status</string>
    <string name="change_profile">Update Profile</string>
    <string name="hint_languages_learning">Languages you learn</string>

</resources>
