<?xml version="1.0" encoding="utf-8"?>
<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:gravity="center"
    android:padding="10dp"
    android:layout_height="match_parent">


    <LinearLayout
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText
                android:id="@+id/eCorreo"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/contrasena"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="20dp">
            <EditText
                android:id="@+id/eContrasena"
                android:inputType="textPassword"
                android:hint="@string/hint_contrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               />

        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:id="@+id/btnIniciarSesion"
            android:text="@string/btnIniciarSesion"
            android:onClick="iniciarSesionClicked"
            android:padding="12dp"
            android:background="@drawable/white_rounded_button"/>

        <com.google.android.gms.common.SignInButton
            android:layout_marginBottom="25dp"
            android:id="@+id/btnSignInGoogle"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_width="match_parent"
            android:layout_gravity="center_horizontal"
            />

        <com.facebook.login.widget.LoginButton
            android:layout_marginBottom="25dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:id="@+id/btnSignInFacebook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:layout_marginTop="20dp"
                android:text="@string/txtNoAccount"
                android:gravity="center"
                android:id="@+id/link_signup"
                android:textColor="@color/link_blue"/>


    </LinearLayout>

</LinearLayout>